...
      <Button
        onPress={() => {
          navigation.navigate('ApplyToDrive', {
            screen: 'Questionnaire',
          });
        }}
        testID="InfoScreen.StartButton"
        style={styles.started}>
        GET STARTED
      </Button>
      <Button
        style={styles.back}
        status="basic"
...
