...
const Header = (): JSX.Element => {
  const user = useSelector(selectDriver);
  const styles = useStyleSheet(themedStyles);
  return (
    <View style={styles.headerView}>
      <SvgLogo style={styles.logo} />
      <Text style={styles.text} category="h5" testID="DriveScreen.WelcomeText">
        Welcome{user ? `, ${user.first_name}` : ''}!
      </Text>
      <Text style={styles.text} category="p2">
        <FontAwesome5Pro name="bullhorn" size={13} /> Welcome to the new FRAYT
        Driver App beta! We appreciate your feedback.
      </Text>
...
